--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -5,30 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
-        <script type=text/javascript>
-	  $(function() {
-	    $('#generate-button').bind('click', function() {
-	      $.getJSON('http://127.0.0.1:5000/generate', {
-	      }, function(data) {
-		$("#result").text(data.result);
-	      });
-	      return false;
-	    });
-	  });
-          $(function() {
-	    $('#upload-button').bind('click', function() {
-	      $.getJSON('http://127.0.0.1:5000/upload', {
-	      }, function(data) {
-		$("#result").text(data.result);
-	      });
-	      return false;
-	    });
-	  });
-	</script> <!-- will need to check local host will work-->
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='style.css') }}">
+    	<script type="text/javascript" src="{{ url_for('static',filename='scripts.js') }}"></script>
     </head>
     <body>
-        <header class="cr-header"> <!-- to be overlayed in a fixed position over app and flow-->
+        <header class="cr-header nav-slide"> <!-- to be overlayed in a fixed position over app and flow-->
             <p class="header-text">caterate.me</p>
         </header>
         
@@ -77,16 +58,12 @@
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </div>
+	    <form action="/file-upload" class="dropzone" id="my-awesome-dropzone"></form>
         </section>
-        
-        <p id="result"></p>
-
         
         <footer class="cr-footer">
             footer content goes here
         </footer>
     </body>
     
-    <!--<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='style.css') }}">-->
-    <script src="{{ url_for('static',filename='scripts.js') }}" type="text/javascript"></script>
 </html>
